--- a/index.html
+++ b/index.html
@@ -99,5 +99,112 @@
             </div>
         </div>   
     </div>
+    <div class="about">
+        <div class="about-one">
+            <img src="./img/about-1.jpg" alt="" class="about-img">
+            <div class="about-us">
+                <h2>LEARN ABOUT US <hr></h2>
+                <h1>Best School For Your Kids</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur debitis reiciendis libero nam maxime quo deserunt sequi cumque, explicabo pariatur id, impedit blanditiis maiores fuga.</p>
+                <div class="our-service">
+                    <img src="./img/about-2.jpg" alt="">
+                    <div class="our-service-one">
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div>
+                <a href="">Learn more</a>
+            </div>
+        </div>
+    </div>
+    <div class="classes">
+        <h2><hr>POPURAL CLASSES <hr></h2>
+        <h1>Classes for Your Kids</h1>
+        <div class="classes-cards">
+            <div class="classes-card">
+                <img src="./img/class-1.jpg" alt="">
+                <div class="classes-card-one">
+                    <h1>Drawing  Class</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas perspiciatis ducimus eius non asperiores laboriosam, vel quo earum atque quidem!</p>
+                </div>
+                <div class="classes-card-two">
+                    <table>
+                        <tr>
+                            <th>Age of Kids</th>
+                            <td>3-6 Years</td>
+                        </tr>
+                        <tr>
+                            <th>Total Seats</th>
+                            <td>40 Seats</td>
+                        </tr>
+                        <tr>
+                            <th>Classes Time</th>
+                            <td>08:00-10:00</td>
+                        </tr>
+                        <tr>
+                            <th class="no-bottom-border">Tution Fee</th>
+                            <td class="no-bottom-border">$290/ month</td>
+                        </tr>
+                    </table>
+                </div>
+                <a href="">join now</a>
+            </div>
+            <div class="classes-card">
+                <img src="./img/class-2.jpg" alt="">
+                <div class="classes-card-one">
+                    <h1>Language Learning</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas perspiciatis ducimus eius non asperiores laboriosam, vel quo earum atque quidem!</p>
+                </div>
+                <div class="classes-card-two">
+                    <table>
+                        <tr>
+                            <th>Age of Kids</th>
+                            <td>3-6 Years</td>
+                        </tr>
+                        <tr>
+                            <th>Total Seats</th>
+                            <td>40 Seats</td>
+                        </tr>
+                        <tr>
+                            <th>Classes Time</th>
+                            <td>08:00-10:00</td>
+                        </tr>
+                        <tr>
+                            <th class="no-bottom-border">Tution Fee</th>
+                            <td class="no-bottom-border">$290/ month</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="classes-card">
+                <img src="./img/class-1.jpg" alt="">
+                <div class="classes-card-one">
+                    <h1>Drawing  Class</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas perspiciatis ducimus eius non asperiores laboriosam, vel quo earum atque quidem!</p>
+                </div>
+                <div class="classes-card-two">
+                    <table>
+                        <tr>
+                            <th>Age of Kids</th>
+                            <td>3-6 Years</td>
+                        </tr>
+                        <tr>
+                            <th>Total Seats</th>
+                            <td>40 Seats</td>
+                        </tr>
+                        <tr>
+                            <th>Classes Time</th>
+                            <td>08:00-10:00</td>
+                        </tr>
+                        <tr>
+                            <th class="no-bottom-border">Tution Fee</th>
+                            <td class="no-bottom-border">$290/ month</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
