--- a/index.html
+++ b/index.html
@@ -176,11 +176,12 @@
                         </tr>
                     </table>
                 </div>
+                <a href="">join now</a>
             </div>
             <div class="classes-card">
-                <img src="./img/class-1.jpg" alt="">
+                <img src="./img/class-3.jpg" alt="">
                 <div class="classes-card-one">
-                    <h1>Drawing  Class</h1>
+                    <h1>Basic Science</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas perspiciatis ducimus eius non asperiores laboriosam, vel quo earum atque quidem!</p>
                 </div>
                 <div class="classes-card-two">
@@ -203,7 +204,52 @@
                         </tr>
                     </table>
                 </div>
+                <a href="">join now</a>
             </div>
+        </div>
+    </div>
+    <div class="booking">
+        <div class="booking-one">
+            <h2>BOOK A SEAT <hr></h2>
+            <h1>Book A Seat For Your Kid</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam vero enim eaque quidem tenetur dignissimos, aliquid adipisci aliquam doloribus alias similique atque cum debitis hic dolor suscipit laudantium. Excepturi, fuga?</p>
+            <div class="booking-check">
+                <div class="booking-check-one">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26 26">
+                        <path d="M22.566406 4.730469L20.773438 3.511719C20.277344 3.175781 19.597656 3.304688 19.265625 3.796875L10.476563 16.757813L6.4375 12.71875C6.015625 12.296875 5.328125 12.296875 4.90625 12.71875L3.371094 14.253906C2.949219 14.675781 2.949219 15.363281 3.371094 15.789063L9.582031 22C9.929688 22.347656 10.476563 22.613281 10.96875 22.613281C11.460938 22.613281 11.957031 22.304688 12.277344 21.839844L22.855469 6.234375C23.191406 5.742188 23.0625 5.066406 22.566406 4.730469Z"/>
+                    </svg>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>  
+                </div>
+                <div class="booking-check-one">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26 26">
+                        <path d="M22.566406 4.730469L20.773438 3.511719C20.277344 3.175781 19.597656 3.304688 19.265625 3.796875L10.476563 16.757813L6.4375 12.71875C6.015625 12.296875 5.328125 12.296875 4.90625 12.71875L3.371094 14.253906C2.949219 14.675781 2.949219 15.363281 3.371094 15.789063L9.582031 22C9.929688 22.347656 10.476563 22.613281 10.96875 22.613281C11.460938 22.613281 11.957031 22.304688 12.277344 21.839844L22.855469 6.234375C23.191406 5.742188 23.0625 5.066406 22.566406 4.730469Z"/>
+                    </svg>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>  
+                </div>
+                <div class="booking-check-one">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26 26">
+                        <path d="M22.566406 4.730469L20.773438 3.511719C20.277344 3.175781 19.597656 3.304688 19.265625 3.796875L10.476563 16.757813L6.4375 12.71875C6.015625 12.296875 5.328125 12.296875 4.90625 12.71875L3.371094 14.253906C2.949219 14.675781 2.949219 15.363281 3.371094 15.789063L9.582031 22C9.929688 22.347656 10.476563 22.613281 10.96875 22.613281C11.460938 22.613281 11.957031 22.304688 12.277344 21.839844L22.855469 6.234375C23.191406 5.742188 23.0625 5.066406 22.566406 4.730469Z"/>
+                    </svg>
+                    <p>Lorem ipsum dolor sit amet consectetur.</p>  
+                </div>
+            </div>
+            <a href="">Book Now</a>
+        </div>
+        <div class="booking-two">
+           <div class="booking-form">
+            <h1>Book A Seat</h1>
+           </div>
+            <form action="">
+                <input type="text" placeholder="your name" required>
+                <input type="email" placeholder="Your Email" required>
+                <select name="" id="" required>
+                    <option value="" >Select A Class</option>
+                    <option value="">Class 1</option>
+                    <option value="">Class 2</option>
+                    <option value="">Class 3</option>
+                </select>
+                <button>Book Now</button>
+            </form>
         </div>
     </div>
 </body>
