--- a/index.html
+++ b/index.html
@@ -252,5 +252,107 @@
             </form>
         </div>
     </div>
+    <div class="teachers">
+        <h2><hr> OUR TEACHERS <hr></h2>
+        <h1>Meet Our Teachers</h1>
+        <div class="teachers-cards">
+            <div class="teachers-card">
+                <div class="teachers-card-one">
+                    <img src="./img/team-1.jpg" alt="">
+                    <div class="teachers-links">
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                                <path d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z"/>
+                            </svg>
+                        </a>
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M17.525,9H14V7c0-1.032,0.084-1.682,1.563-1.682h1.868v-3.18C16.522,2.044,15.608,1.998,14.693,2 C11.98,2,10,3.657,10,6.699V9H7v4l3-0.001V22h4v-9.003l3.066-0.001L17.525,9z"/>
+                            </svg>
+                        </a>
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                                <path d="M8 3.0097656C4.53 3.0097656 2.0097656 5.0892187 2.0097656 7.9492188C2.0097656 10.819219 4.59 12.990234 8 12.990234C11.47 12.990234 13.990234 10.870625 13.990234 7.890625C13.830234 5.020625 11.36 3.0097656 8 3.0097656 z M 3 15C2.45 15 2 15.45 2 16L2 45C2 45.55 2.45 46 3 46L13 46C13.55 46 14 45.55 14 45L14 16C14 15.45 13.55 15 13 15L3 15 z M 18 15C17.45 15 17 15.45 17 16L17 45C17 45.55 17.45 46 18 46L27 46C27.552 46 28 45.552 28 45L28 30L28 29.75L28 29.5C28 27.13 29.820625 25.199531 32.140625 25.019531C32.260625 24.999531 32.38 25 32.5 25C32.62 25 32.739375 24.999531 32.859375 25.019531C35.179375 25.199531 37 27.13 37 29.5L37 45C37 45.552 37.448 46 38 46L47 46C47.55 46 48 45.55 48 45L48 28C48 21.53 44.529063 15 36.789062 15C33.269062 15 30.61 16.360234 29 17.490234L29 16C29 15.45 28.55 15 28 15L18 15 z"/>
+                              </svg>
+                        </a>
+                    </div>
+                </div>
+                <h1>Julia Smith</h1>
+                <p>Music Teacher</p>
+            </div>
+            <div class="teachers-card">
+                <div class="teachers-card-one">
+                    <img src="./img/team-2.jpg" alt="">
+                    <div class="teachers-links">
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                                <path d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z"/>
+                            </svg>
+                        </a>
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M17.525,9H14V7c0-1.032,0.084-1.682,1.563-1.682h1.868v-3.18C16.522,2.044,15.608,1.998,14.693,2 C11.98,2,10,3.657,10,6.699V9H7v4l3-0.001V22h4v-9.003l3.066-0.001L17.525,9z"/>
+                            </svg>
+                        </a>
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                                <path d="M8 3.0097656C4.53 3.0097656 2.0097656 5.0892187 2.0097656 7.9492188C2.0097656 10.819219 4.59 12.990234 8 12.990234C11.47 12.990234 13.990234 10.870625 13.990234 7.890625C13.830234 5.020625 11.36 3.0097656 8 3.0097656 z M 3 15C2.45 15 2 15.45 2 16L2 45C2 45.55 2.45 46 3 46L13 46C13.55 46 14 45.55 14 45L14 16C14 15.45 13.55 15 13 15L3 15 z M 18 15C17.45 15 17 15.45 17 16L17 45C17 45.55 17.45 46 18 46L27 46C27.552 46 28 45.552 28 45L28 30L28 29.75L28 29.5C28 27.13 29.820625 25.199531 32.140625 25.019531C32.260625 24.999531 32.38 25 32.5 25C32.62 25 32.739375 24.999531 32.859375 25.019531C35.179375 25.199531 37 27.13 37 29.5L37 45C37 45.552 37.448 46 38 46L47 46C47.55 46 48 45.55 48 45L48 28C48 21.53 44.529063 15 36.789062 15C33.269062 15 30.61 16.360234 29 17.490234L29 16C29 15.45 28.55 15 28 15L18 15 z"/>
+                              </svg>
+                        </a>
+                    </div>
+                </div>
+                <h1>John Doe</h1>
+                <p>Language Teacher</p>
+            </div>
+            <div class="teachers-card">
+                <div class="teachers-card-one">
+                    <img src="./img/team-3.jpg" alt="">
+                    <div class="teachers-links">
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                                <path d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z"/>
+                            </svg>
+                        </a>
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M17.525,9H14V7c0-1.032,0.084-1.682,1.563-1.682h1.868v-3.18C16.522,2.044,15.608,1.998,14.693,2 C11.98,2,10,3.657,10,6.699V9H7v4l3-0.001V22h4v-9.003l3.066-0.001L17.525,9z"/>
+                            </svg>
+                        </a>
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                                <path d="M8 3.0097656C4.53 3.0097656 2.0097656 5.0892187 2.0097656 7.9492188C2.0097656 10.819219 4.59 12.990234 8 12.990234C11.47 12.990234 13.990234 10.870625 13.990234 7.890625C13.830234 5.020625 11.36 3.0097656 8 3.0097656 z M 3 15C2.45 15 2 15.45 2 16L2 45C2 45.55 2.45 46 3 46L13 46C13.55 46 14 45.55 14 45L14 16C14 15.45 13.55 15 13 15L3 15 z M 18 15C17.45 15 17 15.45 17 16L17 45C17 45.55 17.45 46 18 46L27 46C27.552 46 28 45.552 28 45L28 30L28 29.75L28 29.5C28 27.13 29.820625 25.199531 32.140625 25.019531C32.260625 24.999531 32.38 25 32.5 25C32.62 25 32.739375 24.999531 32.859375 25.019531C35.179375 25.199531 37 27.13 37 29.5L37 45C37 45.552 37.448 46 38 46L47 46C47.55 46 48 45.55 48 45L48 28C48 21.53 44.529063 15 36.789062 15C33.269062 15 30.61 16.360234 29 17.490234L29 16C29 15.45 28.55 15 28 15L18 15 z"/>
+                              </svg>
+                        </a>
+                    </div>
+                </div>
+                <h1>Mollie Ross</h1>
+                <p>Dance Teacher</p>
+            </div>
+            <div class="teachers-card">
+                <div class="teachers-card-one">
+                    <img src="./img/team-4.jpg" alt="">
+                    <div class="teachers-links">
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                                <path d="M28,6.937c-0.957,0.425-1.985,0.711-3.064,0.84c1.102-0.66,1.947-1.705,2.345-2.951c-1.03,0.611-2.172,1.055-3.388,1.295 c-0.973-1.037-2.359-1.685-3.893-1.685c-2.946,0-5.334,2.389-5.334,5.334c0,0.418,0.048,0.826,0.138,1.215 c-4.433-0.222-8.363-2.346-10.995-5.574C3.351,6.199,3.088,7.115,3.088,8.094c0,1.85,0.941,3.483,2.372,4.439 c-0.874-0.028-1.697-0.268-2.416-0.667c0,0.023,0,0.044,0,0.067c0,2.585,1.838,4.741,4.279,5.23 c-0.447,0.122-0.919,0.187-1.406,0.187c-0.343,0-0.678-0.034-1.003-0.095c0.679,2.119,2.649,3.662,4.983,3.705 c-1.825,1.431-4.125,2.284-6.625,2.284c-0.43,0-0.855-0.025-1.273-0.075c2.361,1.513,5.164,2.396,8.177,2.396 c9.812,0,15.176-8.128,15.176-15.177c0-0.231-0.005-0.461-0.015-0.69C26.38,8.945,27.285,8.006,28,6.937z"/>
+                            </svg>
+                        </a>
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M17.525,9H14V7c0-1.032,0.084-1.682,1.563-1.682h1.868v-3.18C16.522,2.044,15.608,1.998,14.693,2 C11.98,2,10,3.657,10,6.699V9H7v4l3-0.001V22h4v-9.003l3.066-0.001L17.525,9z"/>
+                            </svg>
+                        </a>
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                                <path d="M8 3.0097656C4.53 3.0097656 2.0097656 5.0892187 2.0097656 7.9492188C2.0097656 10.819219 4.59 12.990234 8 12.990234C11.47 12.990234 13.990234 10.870625 13.990234 7.890625C13.830234 5.020625 11.36 3.0097656 8 3.0097656 z M 3 15C2.45 15 2 15.45 2 16L2 45C2 45.55 2.45 46 3 46L13 46C13.55 46 14 45.55 14 45L14 16C14 15.45 13.55 15 13 15L3 15 z M 18 15C17.45 15 17 15.45 17 16L17 45C17 45.55 17.45 46 18 46L27 46C27.552 46 28 45.552 28 45L28 30L28 29.75L28 29.5C28 27.13 29.820625 25.199531 32.140625 25.019531C32.260625 24.999531 32.38 25 32.5 25C32.62 25 32.739375 24.999531 32.859375 25.019531C35.179375 25.199531 37 27.13 37 29.5L37 45C37 45.552 37.448 46 38 46L47 46C47.55 46 48 45.55 48 45L48 28C48 21.53 44.529063 15 36.789062 15C33.269062 15 30.61 16.360234 29 17.490234L29 16C29 15.45 28.55 15 28 15L18 15 z"/>
+                              </svg>
+                        </a>
+                    </div>
+                </div>
+                <h1>Donald John</h1>
+                <p>Art Teacher</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
