--- a/index.html
+++ b/index.html
@@ -354,5 +354,169 @@
             </div>
         </div>
     </div>
+    <div class="testimony">
+        <h2><hr> TESTIMONIAL <hr></h2>
+        <h1>What Parents Say!</h1>
+       <div class="testimony-cards">
+            <div class="testimony-card" id="parent1">
+                <div class="testimony-card-one">
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                            <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
+                        </svg>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                </div>
+                <div class="testimony-card-two">
+                    <img src="./img/testimonial-1.jpg" alt="">
+                    <div class="parents-name">
+                        <h1>Parent Name</h1>
+                        <p>profession</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimony-card" id="">
+                <div class="testimony-card-one">
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                            <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
+                        </svg>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                </div>
+                <div class="testimony-card-two">
+                    <img src="./img/testimonial-2.jpg" alt="">
+                    <div class="parents-name">
+                        <h1>Parent Name</h1>
+                        <p>profession</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-card-one">
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                            <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
+                        </svg>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                </div>
+                <div class="testimony-card-two">
+                    <img src="./img/testimonial-3.jpg" alt="">
+                    <div class="parents-name">
+                        <h1>Parent Name</h1>
+                        <p>profession</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimony-card" id="parent2">
+                <div class="testimony-card-one">
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                            <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
+                        </svg>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                </div>
+                <div class="testimony-card-two">
+                    <img src="./img/testimonial-4.jpg" alt="">
+                    <div class="parents-name">
+                        <h1>Parent Name</h1>
+                        <p>profession</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-card-one">
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                            <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
+                        </svg>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                </div>
+                <div class="testimony-card-two">
+                    <img src="./img/testimonial-1.jpg" alt="">
+                    <div class="parents-name">
+                        <h1>Parent Name</h1>
+                        <p>profession</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimony-card" id="parent3">
+                <div class="testimony-card-one">
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                            <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
+                        </svg>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                </div>
+                <div class="testimony-card-two">
+                    <img src="./img/testimonial-2.jpg" alt="">
+                    <div class="parents-name">
+                        <h1>Parent Name</h1>
+                        <p>profession</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-card-one">
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                            <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
+                        </svg>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                </div>
+                <div class="testimony-card-two">
+                    <img src="./img/testimonial-2.jpg" alt="">
+                    <div class="parents-name">
+                        <h1>Parent Name</h1>
+                        <p>profession</p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-card-one">
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                            <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
+                        </svg>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                </div>
+                <div class="testimony-card-two">
+                    <img src="./img/testimonial-2.jpg" alt="">
+                    <div class="parents-name">
+                        <h1>Parent Name</h1>
+                        <p>profession</p>
+                    </div>
+                </div>
+            </div>
+             <div class="testimony-card" id="parent4">
+                <div class="testimony-card-one">
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                            <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
+                        </svg>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                </div>
+                <div class="testimony-card-two">
+                    <img src="./img/testimonial-2.jpg" alt="">
+                    <div class="parents-name">
+                        <h1>Parent Name</h1>
+                        <p>profession</p>
+                    </div>
+                </div>
+            </div>
+       </div>
+       <div class="slide">
+        <a href="#parent1">
+            <div class="slide-one"></div>
+        </a>
+        <a href="#parent2"> 
+            <div class="slide-one"></div>
+        </a>
+        <a href=" #parent3">
+            <div class="slide-one"></div>
+        </a>
+        <a href=" #parent4">
+            <div class="slide-one"></div>
+        </a>
+    </div>
+    </div>
 </body>
-</html>
+</html> 
