--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         </a>
         <div class="nav-links">
             <a href="" class="on">HOME</a>
-            <a href="">About</a>
-            <a href="">Classes</a>
-            <a href="">Teachers</a>
-            <a href="">Gallery</a>
+            <a href="about.html">About</a>
+            <a href="classes.html">Classes</a>
+            <a href="teachers.html">Teachers</a>
+            <a href="gallery.html">Gallery</a>
             <a href="">
                 Pages
             </a>
-            <a href="">Contacts</a>
+            <a href="contacts.html">Contacts</a>
         </div>
         <div class="nav-join">
             <a href=""> Join Class</a>
