--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@
                 <h1>KidKinder</h1>
             </div>
         </a>
-        <div class="nav-links">
+        <div class="nav-links" id="nav">
             <a href="" class="on">HOME</a>
             <a href="about.html">About</a>
             <a href="classes.html">Classes</a>
             <a href="teachers.html">Teachers</a>
             <a href="gallery.html">Gallery</a>
-            <a href="">
-                Pages
-            </a>
+            <a href="">Pages</a>
             <a href="contacts.html">Contacts</a>
         </div>
         <div class="nav-join">
             <a href=""> Join Class</a>
+        </div>
+        <div class="menu">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="menu">
+                <path d="M0 7.5L0 12.5L50 12.5L50 7.5 Z M 0 22.5L0 27.5L50 27.5L50 22.5 Z M 0 37.5L0 42.5L50 42.5L50 37.5Z"/>
+            </svg>
         </div>
     </div>
     <div class="intro">
@@ -733,5 +736,12 @@
             </div>
         </div>
     </div>
+    <script>
+        var menubtn = document.querySelector('#menu');
+        var nav = document.querySelector('#nav');
+        menubtn.onclick = function(){
+            nav.classList.toggle('onclick');
+        }
+    </script>
 </body>
 </html> 
