--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="nav-join">
             <a href=""> Join Class</a>
         </div>
-        <div class="menu">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="menu">
-                <path d="M0 7.5L0 12.5L50 12.5L50 7.5 Z M 0 22.5L0 27.5L50 27.5L50 22.5 Z M 0 37.5L0 42.5L50 42.5L50 37.5Z"/>
-            </svg>
+        <div class="menu" id="menu">
+          <div class="menu1"></div>
+          <div class="menu2"></div>
+          <div class="menu3"></div>
         </div>
     </div>
     <div class="intro">
