--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
             <a href=""> Join Class</a>
         </div>
         <div class="menu" id="menu">
-          <div class="menu1"></div>
+          <!-- <div class="menu1"></div>
           <div class="menu2"></div>
-          <div class="menu3"></div>
+          <div class="menu3"></div> -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+                <path d="M0 7.5L0 12.5L50 12.5L50 7.5 Z M 0 22.5L0 27.5L50 27.5L50 22.5 Z M 0 37.5L0 42.5L50 42.5L50 37.5Z"/>
+            </svg>
         </div>
     </div>
     <div class="intro">
