--- a/contacts.html
+++ b/contacts.html
@@ -49,10 +49,10 @@
         <h1>Contact Us For Any Query</h1>
         <div class="contacts-one">
             <form action="">
-                <input type="text" placeholder="Your Name">
-                <input type="email" placeholder="Your Email">
-                <input type="text" name="" id="" placeholder="subject">
-                <textarea  placeholder="Messages"></textarea>
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <input type="text" name="" id="" placeholder="subject" required>
+                <textarea  placeholder="Messages" required></textarea>
                 <button>Send Messages</button>
             </form>
             <div class="contacts-two">
