--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>KidKinder</title>
     <link rel="stylesheet" href="./kidkinder.css">
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2864387622629553"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="nav">
