--- a/teachers.html
+++ b/teachers.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kidkinder</title>
     <link rel="stylesheet" href="./kidkinder.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2864387622629553"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="nav">
