--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="theme-color" content="#17a2b8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <title>kidkinder</title>
     <link rel="stylesheet" href="./kidkinder.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2864387622629553"
@@ -50,13 +51,13 @@
             <div class="about-us">
                 <h2>LEARN ABOUT US <hr></h2>
                 <h1>Best School For Your Kids</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur debitis reiciendis libero nam maxime quo deserunt sequi cumque, explicabo pariatur id, impedit blanditiis maiores fuga.</p>
+                <p>this the best school for your kids because we have amazing place to teach your kids and we takecare of them as if they are our kids</p>
                 <div class="our-service">
                     <img src="./img/about-2.jpg" alt="">
                     <div class="our-service-one">
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>many studying instruments</p>
+                        <p>large place for kids</p>
+                        <p>many playgrounds for them to have fun</p>
                     </div>
                 </div>
                 <a href="">Learn more</a>
@@ -70,7 +71,7 @@
              </svg>
              <div class="service-words">
                  <h2>Play Ground</h2>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                 <p>we got many playground a kid can have alot of fun and get amazing experiences about sports</p>
              </div>
         </div>
          <div class="service-card">
@@ -79,7 +80,7 @@
              </svg>
              <div class="service-words">
                  <h2>Music and Dance</h2>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                 <p>we teach a kid to have fun by music and dancing</p>
              </div>
          </div>
          <div class="service-card">
@@ -88,7 +89,7 @@
              </svg>
              <div class="service-words">
                  <h2>Arts and Crafts</h2>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                 <p>we have many instruments which can help akid who have a passion for arts and crafts can fit in</p>
              </div>
          </div>
          <div class="service-card">
@@ -97,7 +98,7 @@
              </svg>
              <div class="service-words">
                  <h2>Safe Transportation</h2>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                 <p>we have the best and safe transport for your kids</p>
              </div>
          </div> 
          <div class="service-card">
@@ -106,7 +107,7 @@
              </svg>
              <div class="service-words">
                  <h2>Healthy Food</h2>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                 <p>we prepare delicious and healthy food for kid so that they can a balanced diet </p>
              </div>
          </div> 
          <div class="service-card">
@@ -115,10 +116,10 @@
              </svg>
              <div class="service-words">
                  <h2>Educational Tour</h2>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                 <p>we make our kids have edication tour in order to make a kid have more experience in he/she study about </p>
              </div>
          </div>   
-    </div>
+     </div>
     <div class="teachers">
         <h2><hr> OUR TEACHERS <hr></h2>
         <h1>Meet Our Teachers</h1>
