--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,7 @@
     <meta name="theme-color" content="#17a2b8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <title>kidkinder</title>
     <link rel="stylesheet" href="./kidkinder.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2864387622629553"
@@ -59,7 +60,7 @@
                 <button>Send Messages</button>
             </form>
             <div class="contacts-two">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione vitae magni laudantium nemo fugit consequuntur tempora? Nihil corporis, fugiat dicta totam expedita non deserunt?</p>
+                <p>if you want to conatct us use the following contact or email us and if you wnt to visit there is address </p>
                 <div class="contacts-two-links">
                    <div class="contacts-svg">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
