--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="intro-words">
             <h2>Kids Learning Center</h2>
             <h1>New Approach to Kids Education</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil eius saepe suscipit ipsam quisquam tempora quae dolorem officia aspernatur ratione debitis voluptatibus voluptates modi neque, amet exercitationem blanditiis ducimus error earum! Rerum nihil molestiae velit. Excepturi veritatis ab autem odio reiciendis?</p>
+            <p>welcome to our best edication to take your kid to and have most amazing experiences and get alot of knowledge and skills and mostly having fun </p>
             <a href="">Learn More</a>
         </div>
         <div class="intro-picture">
@@ -58,7 +58,7 @@
             </svg>
             <div class="service-words">
                 <h2>Play Ground</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                <p>we got many playground a kid can have alot of fun and get amazing experiences about sports</p>
             </div>
        </div>
         <div class="service-card">
@@ -67,7 +67,7 @@
             </svg>
             <div class="service-words">
                 <h2>Music and Dance</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                <p>we teach a kid to have fun by music and dancing</p>
             </div>
         </div>
         <div class="service-card">
@@ -76,7 +76,7 @@
             </svg>
             <div class="service-words">
                 <h2>Arts and Crafts</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                <p>we have many instruments which can help akid who have a passion for arts and crafts can fit in</p>
             </div>
         </div>
         <div class="service-card">
@@ -85,7 +85,7 @@
             </svg>
             <div class="service-words">
                 <h2>Safe Transportation</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                <p>we have the best and safe transport for your kids</p>
             </div>
         </div> 
         <div class="service-card">
@@ -94,7 +94,7 @@
             </svg>
             <div class="service-words">
                 <h2>Healthy Food</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                <p>we prepare delicious and healthy food for kid so that they can a balanced diet </p>
             </div>
         </div> 
         <div class="service-card">
@@ -103,7 +103,7 @@
             </svg>
             <div class="service-words">
                 <h2>Educational Tour</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus velit mollitia blanditiis quaerat</p>
+                <p>we make our kids have edication tour in order to make a kid have more experience in he/she study about </p>
             </div>
         </div>   
     </div>
@@ -113,13 +113,13 @@
             <div class="about-us">
                 <h2>LEARN ABOUT US <hr></h2>
                 <h1>Best School For Your Kids</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur debitis reiciendis libero nam maxime quo deserunt sequi cumque, explicabo pariatur id, impedit blanditiis maiores fuga.</p>
+                <p>this the best school for your kids because we have amazing place to teach your kids and we takecare of them as if they are our kids</p>
                 <div class="our-service">
                     <img src="./img/about-2.jpg" alt="">
                     <div class="our-service-one">
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <p>many studying instruments</p>
+                        <p>large place for kids</p>
+                        <p>many playgrounds for them to have fun</p>
                     </div>
                 </div>
                 <a href="">Learn more</a>
@@ -134,7 +134,7 @@
                 <img src="./img/class-1.jpg" alt="">
                 <div class="classes-card-one">
                     <h1>Drawing  Class</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas perspiciatis ducimus eius non asperiores laboriosam, vel quo earum atque quidem!</p>
+                    <p>one of our most popular classes is drawing because we got best teachers for that</p>
                 </div>
                 <div class="classes-card-two">
                     <table>
@@ -162,7 +162,7 @@
                 <img src="./img/class-2.jpg" alt="">
                 <div class="classes-card-one">
                     <h1>Language Learning</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas perspiciatis ducimus eius non asperiores laboriosam, vel quo earum atque quidem!</p>
+                    <p>we also got language school to help our kids to understand more about language and speak them</p>
                 </div>
                 <div class="classes-card-two">
                     <table>
@@ -190,7 +190,7 @@
                 <img src="./img/class-3.jpg" alt="">
                 <div class="classes-card-one">
                     <h1>Basic Science</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas perspiciatis ducimus eius non asperiores laboriosam, vel quo earum atque quidem!</p>
+                    <p>we have enough instrument to teach basic science so they can understand it well</p>
                 </div>
                 <div class="classes-card-two">
                     <table>
@@ -220,25 +220,25 @@
         <div class="booking-one">
             <h2>BOOK A SEAT <hr></h2>
             <h1>Book A Seat For Your Kid</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam vero enim eaque quidem tenetur dignissimos, aliquid adipisci aliquam doloribus alias similique atque cum debitis hic dolor suscipit laudantium. Excepturi, fuga?</p>
+            <p>book your seat for kid now because it best for your kid</p>
             <div class="booking-check">
                 <div class="booking-check-one">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26 26">
                         <path d="M22.566406 4.730469L20.773438 3.511719C20.277344 3.175781 19.597656 3.304688 19.265625 3.796875L10.476563 16.757813L6.4375 12.71875C6.015625 12.296875 5.328125 12.296875 4.90625 12.71875L3.371094 14.253906C2.949219 14.675781 2.949219 15.363281 3.371094 15.789063L9.582031 22C9.929688 22.347656 10.476563 22.613281 10.96875 22.613281C11.460938 22.613281 11.957031 22.304688 12.277344 21.839844L22.855469 6.234375C23.191406 5.742188 23.0625 5.066406 22.566406 4.730469Z"/>
                     </svg>
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>  
+                    <p>good school</p>  
                 </div>
                 <div class="booking-check-one">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26 26">
                         <path d="M22.566406 4.730469L20.773438 3.511719C20.277344 3.175781 19.597656 3.304688 19.265625 3.796875L10.476563 16.757813L6.4375 12.71875C6.015625 12.296875 5.328125 12.296875 4.90625 12.71875L3.371094 14.253906C2.949219 14.675781 2.949219 15.363281 3.371094 15.789063L9.582031 22C9.929688 22.347656 10.476563 22.613281 10.96875 22.613281C11.460938 22.613281 11.957031 22.304688 12.277344 21.839844L22.855469 6.234375C23.191406 5.742188 23.0625 5.066406 22.566406 4.730469Z"/>
                     </svg>
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>  
+                    <p>healthy food</p>  
                 </div>
                 <div class="booking-check-one">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26 26">
                         <path d="M22.566406 4.730469L20.773438 3.511719C20.277344 3.175781 19.597656 3.304688 19.265625 3.796875L10.476563 16.757813L6.4375 12.71875C6.015625 12.296875 5.328125 12.296875 4.90625 12.71875L3.371094 14.253906C2.949219 14.675781 2.949219 15.363281 3.371094 15.789063L9.582031 22C9.929688 22.347656 10.476563 22.613281 10.96875 22.613281C11.460938 22.613281 11.957031 22.304688 12.277344 21.839844L22.855469 6.234375C23.191406 5.742188 23.0625 5.066406 22.566406 4.730469Z"/>
                     </svg>
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>  
+                    <p>best at teaching</p>  
                 </div>
             </div>
             <a href="">Book Now</a>
@@ -372,13 +372,13 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                             <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
                         </svg>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                        good school to take your kid to best it the best i've seen and they teach science well</p>
                 </div>
                 <div class="testimony-card-two">
                     <img src="./img/testimonial-1.jpg" alt="">
                     <div class="parents-name">
-                        <h1>Parent Name</h1>
-                        <p>profession</p>
+                        <h1>john moriki</h1>
+                        <p>doctor at science</p>
                     </div>
                 </div>
             </div>
@@ -388,13 +388,13 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                             <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
                         </svg>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                        hi i think this school is great to get bring your to because they take good care of our kids very well</p>
                 </div>
                 <div class="testimony-card-two">
                     <img src="./img/testimonial-2.jpg" alt="">
                     <div class="parents-name">
-                        <h1>Parent Name</h1>
-                        <p>profession</p>
+                        <h1>anna melniki</h1>
+                        <p>teacher</p>
                     </div>
                 </div>
             </div>
@@ -404,7 +404,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                             <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
                         </svg>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                        it is very cool school and best in art and craft</p>
                 </div>
                 <div class="testimony-card-two">
                     <img src="./img/testimonial-3.jpg" alt="">
@@ -533,7 +533,7 @@
             <div class="blog-card">
                 <img src="./img/blog-1.jpg" alt="">
                 <div class="blog-card-one">
-                    <h1>Lorem ipsum dolor sit amet.</h1>
+                    <h1>there are many drawing talented kids</h1>
                     <div class="blog-comments">
                         <div class="blog-comments-one">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -554,14 +554,14 @@
                             <p>15</p>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid dolores quibusdam adipisci provident magni! Provident sunt sequi libero molestias eum optio, voluptatem earum nam labore mollitia veniam nisi hic enim quisquam simi</p>
+                    <p>recently we have seen many talented kid who draw amzing drawingd at out school</p>
                     <a href="">Read More</a>
                 </div>
             </div>
             <div class="blog-card">
                 <img src="./img/blog-2.jpg" alt="">
                 <div class="blog-card-one">
-                    <h1>Lorem ipsum dolor sit amet.</h1>
+                    <h1>increase number of kids to welcome</h1>
                     <div class="blog-comments">
                         <div class="blog-comments-one">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -582,14 +582,14 @@
                             <p>15</p>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid dolores quibusdam adipisci provident magni! Provident sunt sequi libero molestias eum optio, voluptatem earum nam labore mollitia veniam nisi hic enim quisquam simi</p>
+                    <p>next year we will increase number of kids to teach and welcome many kids to study at our school</p>
                     <a href="">Read More</a>
                 </div>
             </div>
             <div class="blog-card">
                 <img src="./img/blog-3.jpg" alt="">
                 <div class="blog-card-one">
-                    <h1>Lorem ipsum dolor sit amet.</h1>
+                    <h1>amazing library in our city with many books</h1>
                     <div class="blog-comments">
                         <div class="blog-comments-one">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -610,7 +610,7 @@
                             <p>15</p>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid dolores quibusdam adipisci provident magni! Provident sunt sequi libero molestias eum optio, voluptatem earum nam labore mollitia veniam nisi hic enim quisquam simi</p>
+                    <p>it is said that our school have best library in city and to have many book about different topic</p>
                     <a href="">Read More</a>
                 </div>
             </div>
