--- a/teachers.html
+++ b/teachers.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kidkinder</title>
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./kidkinder.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2864387622629553"
      crossorigin="anonymous"></script>
@@ -252,13 +253,13 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                             <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
                         </svg>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                        good school to take your kid to best it the best i've seen and they teach science well</p>
                 </div>
                 <div class="testimony-card-two">
                     <img src="./img/testimonial-1.jpg" alt="">
                     <div class="parents-name">
-                        <h1>Parent Name</h1>
-                        <p>profession</p>
+                        <h1>john moriki</h1>
+                        <p>doctor at science</p>
                     </div>
                 </div>
             </div>
@@ -268,13 +269,13 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                             <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
                         </svg>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                        hi i think this school is great to get bring your to because they take good care of our kids very well</p>
                 </div>
                 <div class="testimony-card-two">
                     <img src="./img/testimonial-2.jpg" alt="">
                     <div class="parents-name">
-                        <h1>Parent Name</h1>
-                        <p>profession</p>
+                        <h1>anna melniki</h1>
+                        <p>teacher</p>
                     </div>
                 </div>
             </div>
@@ -284,7 +285,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                             <path d="M16 5C8.28125 5 2 11.28125 2 19L2 41L22 41L22 21L11 21L11 19C11 15.140625 13.242188 12 16 12L17 12L17 5 Z M 42 5C34.28125 5 28 11.28125 28 19L28 41L48 41L48 21L37 21L37 19C37 15.140625 39.242188 12 42 12L43 12L43 5Z"/>
                         </svg>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt non rerum dignissimos obcaecati itaque adipisci dolores!</p>
+                        it is very cool school and best in art and craft</p>
                 </div>
                 <div class="testimony-card-two">
                     <img src="./img/testimonial-3.jpg" alt="">
